--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.10",
     "@apollo/server": "^4.10.0",
     "apollo-server": "^3.13.0",
-    "graphql": "^16.8.1"
+    "apollo-server-errors": "^3.3.1",
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1"
   }
 }
