--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@apollo/server": "^4.10.0",
     "apollo-server": "^3.13.0",
     "apollo-server-errors": "^3.3.1",
+    "bcrypt": "^5.1.1",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.1.1"
   }
 }
